--- a/css/chats.css
+++ b/css/chats.css
@@ -43,3 +43,26 @@
   font-size: 10px;
   color: #b4b4b4;
 }
+
+.chat-btn {
+  width: 60px;
+  height: 60px;
+  background-color: #ffe94a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: fixed;
+  right: 20px;
+  bottom: 80px;
+  font-size: 20px;
+  color: #523737;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  transition: color 0.3s, background 0.3s, transform 0.5s ease-in-out;
+}
+
+.chat-btn:hover {
+  color: white;
+  background: #523737;
+  transform: rotateY(1turn);
+}
