--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,11 @@
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 2;
+}
+
+.top-header a {
+  color: white;
 }
 
 .top-header .header_top,
@@ -24,6 +29,10 @@
 
 .top-header .header_column {
   width: 33%;
+}
+
+.top-header .header_bottom .header_column:first-child {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .top-header .header_column:last-child {
