--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,10 @@
 @import "navigation.css";
 @import "friends.css";
 @import "chats.css";
+@import "find.css";
+@import "more.css";
+@import "profile.css";
+@import "chat.css";
+@import "search-bar.css";
+@import "bigScreen.css";
+@import "mobile.css";
